<resources>
    <string name="app_name">My Diary</string>
    <string name="log_in">Войти</string>
    <string name="forgot_password">Забыл пароль?</string>
    <string name="Remember_me">Запомнить меня</string>
    <string name="password">Введите пароль</string>
    <string name="Password_1">Пароль</string>
    <string name="emaill">Введите почту</string>
    <string name="email_1">Почта</string>
    <string name="or">или</string>
    <string name="google">Войти через Google</string>
    <string name="facebook">Войти в Facebook</string>
    <string name="apple">Войти с Apple</string>
    <string name="log_in1">Войти</string>
    <string name="not_sign_in">Нет аккаунта? Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="paassword">Пароль</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="calendar">Календарь</string>
    <string name="myself">Мое</string>
    <string name="Tasks">Задачи</string>
    <string name="Prochee">Прочее</string>
    <string name="october">октябрь</string>
    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wendsday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="suturday">сб</string>
    <string name="sunday">вс</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_15_10_17_30">15.10 / 17.30</string>
    <string name="_20_10_16_45">20.10 / 16.45</string>
    <string name="meet">встреча с Акбийке в колледже.</string>
    <string name="task">Создать дизайн для приложения: Придумать тему для приложения Создать дизайн по выбранной теме на 6-7 макетов Создать проект в android studio и разработать все макеты по дизайну.</string>
</resources>