<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar"
    android:background="@color/background">


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_10" />

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/imageView13"
        app:layout_constraintStart_toStartOf="@id/imageView13"
        app:layout_constraintTop_toTopOf="@id/imageView13"
        app:layout_constraintBottom_toBottomOf="@id/imageView13"
        app:srcCompat="@drawable/frame_14"
        android:background="@color/back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/october"
        android:textSize="24sp"
        android:textColor="@color/green_b"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/main_liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView13"
            android:layout_marginTop="0dp">

            <TableRow>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/monday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/tuesday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/wendsday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/thursday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/friday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/suturday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/sunday"
                    android:textSize="20sp"
                    android:textColor="@color/green_b"
                    android:fontFamily="sans-serif-black"/>

            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_1"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_2"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_3"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_4"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_5"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_6"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_7"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_8"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_9"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_10"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_11"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_12"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_13"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_14"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_15"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_16"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_17"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_18"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_19"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_20"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_21"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_22"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_23"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_24"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_25"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_26"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_27"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_28"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_29"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_30"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/_31"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tableLayout"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/_______"
                android:layout_marginTop="20dp">
            </ImageView>

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/_______"
                android:layout_marginTop="20dp">
            </ImageView>

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/_______"
                android:layout_marginTop="20dp">
            </ImageView>

        </LinearLayout>
    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>