<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Singin"
    android:background="@color/background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:srcCompat="@drawable/msn_user_avatar_person_people_icon_124220_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        android:layout_marginTop="140dp"
        android:layout_marginStart="170dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/component_2" />

    <LinearLayout
        android:id="@+id/main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/liner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="240dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2" />

            <EditText
                android:id="@+id/textView2"
                android:layout_width="310dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4" />

            <EditText
                android:id="@+id/textView4"
                android:layout_width="310dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:text="@string/paassword"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/textView13" />

            <EditText
                android:id="@+id/textView13"
                android:layout_width="310dp"
                android:layout_height="40dp"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/sign_in_card"
            android:layout_width="320dp"
            android:layout_height="50dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner1"
            android:layout_marginTop="70dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:text="@string/sign_in"
                android:background="@color/green_w" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>